--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,9 @@ repo_name: Waikato/acceleratedWEKA
 repo_url: https://github.com/Waikato/acceleratedWEKA
 nav:
   - Home: index.md
-  - Installation: Introdution/installation.md
-  - Getting Started: Introduction/getting_started.md
-  - Examples: Introduction/examples.md
+  - Introduction: Introdution
+  # - Getting Started: Introduction/getting_started.md
+  # - Examples: Introduction/examples.md
   - About: about.md
 theme:
   name: material
