--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,10 @@ repo_url: https://github.com/Waikato/acceleratedWEKA
 nav:
   - Home: index.md
   - Introduction:
+    - Installation: Introduction/installation.md
+    - Architecture: Introduction/architecture.md
     - Getting Started: Introduction/getting_started.md
+    - Features: Introduction/features.md
     - Examples: Introduction/examples.md
   - About: about.md
 theme:
