Use expandable menu.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,7 @@ theme:
   icon:
     repo: fontawesome/brands/github
   features:
-    - navigation.tabs
-    - navigation.tabs.sticky
+    - navigation.expand
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
