--- a/conda.recipe/conda_build_config.yaml
+++ b/conda.recipe/conda_build_config.yaml
@@ -1,6 +1,5 @@
 python:
-  - 3.8
   - 3.9
-rapids_version: =22.04.*
-cudatoolkit_version: =11.5.*
+rapids_version: =24.06
+cuda_version: =12.2
 target_platform: linux-64
